--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "clegginabox/pdf-merger",
+    "name": "iizno/pdf-merger",
     "description": "PDF File Merger for PHP5",
     "require": {
         "setasign/fpdi": "^2.2",
